# vlc

./: CMakeLists.txt  package.xml  setup.py  vlcrc
msg/: CommandReport.msg  PlayerState.msg
nodes/: vlcplayer.py
src/vlc/: .player.py.swo  .player.py.swp  libvlc.py  player.py
srv/: MuteToggle.srv  Seek.srv  SetVol.srv
