<?xml version="1.0"?>
<package>
  <name>vlc</name>
  <version>0.0.0</version>
  <description>Utilities for controlling VLC from ROS</description>

  <maintainer email="lazewatd@engr.oregonstate.edu">Dan Lazewatsky</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-pyuserinput</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
